# shipping_price

./: README.md  pyproject.toml
shipping/: pyproject.toml
shipping/src/shipping/: main.py
shipping/src/shipping/modules/: order.py  readers.py  rule_applier.py  shipping_options.py  writers.py
shipping/src/shipping/order_rules/: 01_match_the_lowest_S_price_for_each_order.py  02_third_shippment_via_LP_free.py  03_maximum_discount_10_eur.py  __init__.py
shipping/tests/: conftest.py  test_order.py  test_readers.py  test_rule_applier.py  test_shipping_options.py  test_writers.py
shipping/tests/order_rules/: test_order_rules_package.py  test_rule_01_match_lowest_s_price.py  test_rule_02_third_lp_l_free.py  test_rule_03_max_discount_monthly.py
shipping_price/: main.py
shipping_price/modules/: logging_config.py  order.py  readers.py  rule_applier.py  shipping_options.py  writers.py
shipping_price/modules/order_rules/: 01_match_the_lowest_S_price_for_each_order.py  02_third_shippment_via_LP_free.py  03_maximum_discount_10_eur.py  __init__.py
shipping_price/order_rules/: 01_match_the_lowest_S_price_for_each_order.py  02_third_shippment_via_LP_free.py  03_maximum_discount_10_eur.py
tests/: conftest.py  test_order.py  test_readers.py  test_rule_applier.py  test_shipping_options.py  test_writers.py
tests/order_rules/: test_order_rules_package.py  test_rule_01_match_lowest_s_price.py  test_rule_02_third_lp_l_free.py  test_rule_03_max_discount_monthly.py
