[tool.ruff]
line-length = 88  # Maximum line length (default is 88)
[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "A short description of my project"
[tool.poetry.dependencies]
python = ">=3.8,<4.0"
[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
black = "^22.0"
ruff = "^0.0.282"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"