[project]
name = "shipping"
version = "0.1.0"
description = ""
authors = [
    {name = "Dovydas Martinkus",email = "DOVMA@danskebank.lt"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "shipping", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
black = "^22.0"
ruff = "^0.0.282"

[tool.ruff]
line-length = 88  # Match black's default line length
select = ["F", "E", "I"]  # Enable specific rules (e.g., flake8, import rules)
ignore = ["W503"]  # Ignore specific warnings
fixable = ["F401", "F841", "I001"]  # Allow ruff to automatically fix unused imports, variables, and import sorting

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
